Node.getNodeCount(Predicate<Node>) added